# serializer version: 1
# name: test_sensors[binary_sensor.technove_station_battery_protected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.technove_station_battery_protected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Battery protected',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_battery_protected',
    'unique_id': 'AA:AA:AA:AA:AA:BB_is_battery_protected',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.technove_station_battery_protected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TechnoVE Station Battery protected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.technove_station_battery_protected',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors[binary_sensor.technove_station_charging-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.technove_station_charging',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
    'original_icon': None,
    'original_name': 'Charging',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AA:AA:AA:AA:AA:BB_is_session_active',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.technove_station_charging-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery_charging',
      'friendly_name': 'TechnoVE Station Charging',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.technove_station_charging',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensors[binary_sensor.technove_station_conflict_with_power_sharing_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.technove_station_conflict_with_power_sharing_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Conflict with power sharing mode',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'conflict_in_sharing_config',
    'unique_id': 'AA:AA:AA:AA:AA:BB_conflict_in_sharing_config',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.technove_station_conflict_with_power_sharing_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TechnoVE Station Conflict with power sharing mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.technove_station_conflict_with_power_sharing_mode',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors[binary_sensor.technove_station_power_sharing_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.technove_station_power_sharing_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power sharing mode',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'in_sharing_mode',
    'unique_id': 'AA:AA:AA:AA:AA:BB_in_sharing_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.technove_station_power_sharing_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TechnoVE Station Power sharing mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.technove_station_power_sharing_mode',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_sensors[binary_sensor.technove_station_static_ip-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.technove_station_static_ip',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Static IP',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'is_static_ip',
    'unique_id': 'AA:AA:AA:AA:AA:BB_is_static_ip',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.technove_station_static_ip-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TechnoVE Station Static IP',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.technove_station_static_ip',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors[binary_sensor.technove_station_update-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.technove_station_update',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.UPDATE: 'update'>,
    'original_icon': None,
    'original_name': 'Update',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AA:AA:AA:AA:AA:BB_update_available',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[binary_sensor.technove_station_update-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'update',
      'friendly_name': 'TechnoVE Station Update',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.technove_station_update',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_sensors[sensor.technove_station_current-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_current',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
    'original_icon': None,
    'original_name': 'Current',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AA:AA:AA:AA:AA:BB_current',
    'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
  })
# ---
# name: test_sensors[sensor.technove_station_current-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'current',
      'friendly_name': 'TechnoVE Station Current',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_current',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '23.75',
  })
# ---
# name: test_sensors[sensor.technove_station_input_voltage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_input_voltage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Input voltage',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'voltage_in',
    'unique_id': 'AA:AA:AA:AA:AA:BB_voltage_in',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_sensors[sensor.technove_station_input_voltage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'TechnoVE Station Input voltage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_input_voltage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '238',
  })
# ---
# name: test_sensors[sensor.technove_station_last_session_energy_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_last_session_energy_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Last session energy usage',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'energy_session',
    'unique_id': 'AA:AA:AA:AA:AA:BB_energy_session',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors[sensor.technove_station_last_session_energy_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'TechnoVE Station Last session energy usage',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_last_session_energy_usage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '12.34',
  })
# ---
# name: test_sensors[sensor.technove_station_max_current-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_max_current',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
    'original_icon': None,
    'original_name': 'Max current',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'max_current',
    'unique_id': 'AA:AA:AA:AA:AA:BB_max_current',
    'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
  })
# ---
# name: test_sensors[sensor.technove_station_max_current-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'current',
      'friendly_name': 'TechnoVE Station Max current',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_max_current',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '24',
  })
# ---
# name: test_sensors[sensor.technove_station_max_station_current-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_max_station_current',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.CURRENT: 'current'>,
    'original_icon': None,
    'original_name': 'Max station current',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'max_station_current',
    'unique_id': 'AA:AA:AA:AA:AA:BB_max_station_current',
    'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
  })
# ---
# name: test_sensors[sensor.technove_station_max_station_current-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'current',
      'friendly_name': 'TechnoVE Station Max station current',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricCurrent.AMPERE: 'A'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_max_station_current',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '32',
  })
# ---
# name: test_sensors[sensor.technove_station_output_voltage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_output_voltage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.VOLTAGE: 'voltage'>,
    'original_icon': None,
    'original_name': 'Output voltage',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'voltage_out',
    'unique_id': 'AA:AA:AA:AA:AA:BB_voltage_out',
    'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
  })
# ---
# name: test_sensors[sensor.technove_station_output_voltage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'voltage',
      'friendly_name': 'TechnoVE Station Output voltage',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfElectricPotential.VOLT: 'V'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_output_voltage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '238',
  })
# ---
# name: test_sensors[sensor.technove_station_signal_strength-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_signal_strength',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
    'original_icon': None,
    'original_name': 'Signal strength',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AA:AA:AA:AA:AA:BB_rssi',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: test_sensors[sensor.technove_station_signal_strength-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'TechnoVE Station Signal strength',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_signal_strength',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '-82',
  })
# ---
# name: test_sensors[sensor.technove_station_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'unknown',
        'unplugged',
        'plugged_waiting',
        'plugged_charging',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'status',
    'unique_id': 'AA:AA:AA:AA:AA:BB_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.technove_station_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'TechnoVE Station Status',
      'options': list([
        'unknown',
        'unplugged',
        'plugged_waiting',
        'plugged_charging',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_status',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'plugged_charging',
  })
# ---
# name: test_sensors[sensor.technove_station_total_energy_usage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_total_energy_usage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENERGY: 'energy'>,
    'original_icon': None,
    'original_name': 'Total energy usage',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'energy_total',
    'unique_id': 'AA:AA:AA:AA:AA:BB_energy_total',
    'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
  })
# ---
# name: test_sensors[sensor.technove_station_total_energy_usage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy',
      'friendly_name': 'TechnoVE Station Total energy usage',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_total_energy_usage',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1234',
  })
# ---
# name: test_sensors[sensor.technove_station_wi_fi_network_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.technove_station_wi_fi_network_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:wifi',
    'original_name': 'Wi-Fi network name',
    'platform': 'technove',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'ssid',
    'unique_id': 'AA:AA:AA:AA:AA:BB_ssid',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.technove_station_wi_fi_network_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'TechnoVE Station Wi-Fi network name',
      'icon': 'mdi:wifi',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.technove_station_wi_fi_network_name',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Connecting...',
  })
# ---
